latest installment of portfolio

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
   <head>
-    <title>Massively by HTML5 UP</title>
+    <title>Ray Croxton</title>
     <meta charset="utf-8" />
     <meta
       name="viewport"
@@ -23,12 +23,12 @@
       <!-- Intro -->
       <div id="intro">
         <h1>
-          My Web Dev<br />
+          Ray Croxton's<br />
           Portfolio
         </h1>
         <p>
-          Take a look around and discover my projects and skills. Like what you
-          see? Don't hesitate to contact me!
+          Take a look around and discover my projects and skills.<br />
+          If you like what you see please don't hesitate to reach out!
         </p>
         <ul class="actions">
           <li>
@@ -49,9 +49,9 @@
       <!-- Nav -->
       <nav id="nav">
         <ul class="links">
-          <li class="active"><a href="index.html">This is Massively</a></li>
-          <li><a href="generic.html">Generic Page</a></li>
-          <li><a href="elements.html">Elements Reference</a></li>
+          <li class="active"><a href="index.html">Portfolio</a></li>
+          <li><a href="generic.html">Skills</a></li>
+          <!-- <li><a href="elements.html">Elements Reference</a></li> -->
         </ul>
         <ul class="icons">
           <li>
@@ -86,17 +86,26 @@
             <p>
               I'm a front end web developer with my focus being HTML emails. Web
               development quickly became a big part of my life and I feel
-              extremely grateful to be a part of the world of tech!
+              extremely grateful to be a part of the world of tech! To start,
+              please take a look at my clean and responsive real estate landing
+              page below.
             </p>
           </header>
-          <a href="#" class="image main"
+          <a
+            target="_blank"
+            href="http://raycroxton.com/dreamland"
+            class="image main"
             ><img
-              src="images/dreamland-landing-page.png"
+              id="intro-img"
+              src="https://i.postimg.cc/3xvq5Z3V/dreamland-clone-screen.jpg"
               alt="Dreamland Landing Page"
           /></a>
           <ul class="actions special">
             <li>
-              <a href="/dreamland-landing-page/" class="button large"
+              <a
+                target="_blank"
+                href="http://raycroxton.com/dreamland"
+                class="button large"
                 >Discover</a
               >
             </li>
@@ -108,181 +117,142 @@
           <article>
             <header>
               <h2>
-                <a href="#"
-                  >Sed magna<br />
-                  ipsum faucibus</a
+                <a target="_blank" href="https://raycroxton.com/promotional/"
+                  >Promotional<br />
+                  Email</a
                 >
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic02.jpg" alt=""
+            <a
+              target="_blank"
+              href="https://raycroxton.com/promotional/"
+              class="image fit"
+              ><img
+                src="https://i.postimg.cc/gJNSqSKX/promotional-email.png"
+                alt=""
             /></a>
-            <p>Kinsta</p>
+            <p>
+              Promotional email created with foundations frame work and
+              photoshop
+            </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://raycroxton.com/promotional/"
+                  class="button"
+                  >Discover</a
+                >
+              </li>
             </ul>
           </article>
           <article>
             <header>
               <h2>
-                <a href="#"
-                  >Primis eget<br />
-                  imperdiet lorem</a
+                <a target="_blank" href="https://raycroxton.com/luxuryhome/"
+                  >Luxury Home<br />
+                  Landing Page</a
                 >
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic03.jpg" alt=""
+            <a
+              target="_blank"
+              href="https://raycroxton.com/luxuryhome/"
+              class="image fit"
+              ><img
+                src="https://i.postimg.cc/Gpn5cs22/luxury-homes-screen.jpg"
+                alt=""
             /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              Clean and responsive landing page created with html, scss and
+              photoshop
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://raycroxton.com/luxuryhome/"
+                  class="button"
+                  >Discover</a
+                >
+              </li>
             </ul>
           </article>
           <article>
             <header>
               <h2>
-                <a href="#"
-                  >Ante mattis<br />
-                  interdum dolor</a
+                <a target="_blank" href="https://raycroxton.com/transactional/"
+                  >Transactional<br />
+                  Email</a
                 >
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic04.jpg" alt=""
+            <a
+              target="_blank"
+              href="https://raycroxton.com/transactional/"
+              class="image fit"
+              ><img
+                src="https://i.postimg.cc/wB5b3Tyk/transactional-email.png"
+                alt=""
             /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              Transactional email created with foundations email framework and
+              photoshop
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              <li>
+                <a
+                  target="_blank"
+                  href="https://raycroxton.com/transactional/"
+                  class="button"
+                  >Discover</a
+                >
+              </li>
             </ul>
           </article>
           <article>
             <header>
               <h2>
-                <a href="#"
-                  >Tempus sed<br />
-                  nulla imperdiet</a
+                <a target="_blank" href="https://raycroxton.com/newsletter/"
+                  >Newsletter<br />
+                  Email</a
                 >
               </h2>
             </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic05.jpg" alt=""
+            <a
+              target="_blank"
+              href="https://raycroxton.com/newsletter/"
+              class="image fit"
+              ><img
+                src="https://i.postimg.cc/NMgCXqRv/newsletter-clone-screen.png"
+                alt=""
             /></a>
             <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
+              Newsletter email created with foundations email framework and
+              photoshop
             </p>
             <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
-            </ul>
-          </article>
-          <article>
-            <header>
-              <h2>
-                <a href="#"
-                  >Odio magna<br />
-                  sed consectetur</a
+              <li>
+                <a
+                  target="_blank"
+                  href="http://raycroxton.com/newsletter"
+                  class="button"
+                  >Discover</a
                 >
-              </h2>
-            </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic06.jpg" alt=""
-            /></a>
-            <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
-            </p>
-            <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
-            </ul>
-          </article>
-          <article>
-            <header>
-              <h2>
-                <a href="#"
-                  >Augue lorem<br />
-                  primis vestibulum</a
-                >
-              </h2>
-            </header>
-            <a href="#" class="image fit"
-              ><img src="images/pic07.jpg" alt=""
-            /></a>
-            <p>
-              Donec eget ex magna. Interdum et malesuada fames ac ante ipsum
-              primis in faucibus. Pellentesque venenatis dolor imperdiet dolor
-              mattis sagittis magna etiam.
-            </p>
-            <ul class="actions special">
-              <li><a href="#" class="button">Full Story</a></li>
+              </li>
             </ul>
           </article>
         </section>
 
         <!-- Footer -->
-        <footer>
-          <div class="pagination">
-            <!--<a href="#" class="previous">Prev</a>-->
-            <a href="#" class="page active">1</a>
-            <a href="#" class="page">2</a>
-            <a href="#" class="page">3</a>
-            <span class="extra">&hellip;</span>
-            <a href="#" class="page">8</a>
-            <a href="#" class="page">9</a>
-            <a href="#" class="page">10</a>
-            <a href="#" class="next">Next</a>
-          </div>
-        </footer>
       </div>
 
       <!-- Footer -->
       <footer id="footer">
-        <section>
-          <form method="post" action="#">
-            <div class="fields">
-              <div class="field">
-                <label for="name">Name</label>
-                <input type="text" name="name" id="name" />
-              </div>
-              <div class="field">
-                <label for="email">Email</label>
-                <input type="text" name="email" id="email" />
-              </div>
-              <div class="field">
-                <label for="message">Message</label>
-                <textarea name="message" id="message" rows="3"></textarea>
-              </div>
-            </div>
-            <ul class="actions">
-              <li><input type="submit" value="Send Message" /></li>
-            </ul>
-          </form>
-        </section>
         <section class="split contact">
-          <section class="alt">
-            <h3>Address</h3>
-            <p>
-              1234 Somewhere Road #87257<br />
-              Nashville, TN 00000-0000
-            </p>
-          </section>
-          <section>
-            <h3>Phone</h3>
-            <p><a href="#">(000) 000-0000</a></p>
-          </section>
           <section>
             <h3>Email</h3>
-            <p><a href="#">info@untitled.tld</a></p>
+            <p><a href="#">raycrox1016@gmail.com</a></p>
           </section>
           <section>
             <h3>Social</h3>
@@ -313,12 +283,6 @@
       </footer>
 
       <!-- Copyright -->
-      <div id="copyright">
-        <ul>
-          <li>&copy; Untitled</li>
-          <li>Design: <a href="https://html5up.net">HTML5 UP</a></li>
-        </ul>
-      </div>
     </div>
 
     <!-- Scripts -->
