--- a/generic.html
+++ b/generic.html
@@ -105,6 +105,75 @@
             have no doubt that i can learn it in an adequate amount of time.
           </p>
         </section>
+
+        <section class="work-sequence">
+          <div class="sequence-divs">
+            <div class="diamond">
+              <img
+                id="diamond-img"
+                style="width: 35px"
+                src="https://i.postimg.cc/fWmzTN0K/icons8-think-64.png"
+                alt="prac"
+              />
+            </div>
+            <h3>Think</h3>
+          </div>
+          <div class="sequence-divs">
+            <div class="diamond">
+              <img
+                id="diamond-img"
+                style="width: 40px"
+                src="https://i.postimg.cc/sX2qfRQf/icons8-plan-58.png"
+                alt="prac"
+              />
+            </div>
+            <h3>Plan</h3>
+          </div>
+          <div class="sequence-divs">
+            <div class="diamond">
+              <img
+                id="diamond-img"
+                style="width: 40px"
+                src="https://i.postimg.cc/T38zVSSQ/icons8-windows-10-personalization-50-2.png"
+                alt="prac"
+              />
+            </div>
+            <h3>Design</h3>
+          </div>
+          <div class="sequence-divs">
+            <div class="diamond">
+              <img
+                id="diamond-img"
+                style="width: 40px"
+                src="https://i.postimg.cc/RVvBSnmS/icons8-developer-60.png"
+                alt="prac"
+              />
+            </div>
+            <h3>Build</h3>
+          </div>
+          <div class="sequence-divs">
+            <div class="diamond">
+              <img
+                id="diamond-img"
+                style="width: 40px"
+                src="https://i.postimg.cc/JzGW4Mj6/icons8-test-80.png"
+                alt="prac"
+              />
+            </div>
+            <h3>Test</h3>
+          </div>
+          <div class="sequence-divs">
+            <div class="diamond">
+              <img
+                id="diamond-img"
+                style="width: 40px"
+                src="https://i.postimg.cc/DzGkL6j1/icons8-launch-50.png"
+                alt="prac"
+              />
+            </div>
+            <h3>Launch</h3>
+          </div>
+        </section>
       </div>
 
       <!-- Footer -->
@@ -112,7 +181,9 @@
         <section class="split contact">
           <section>
             <h3>Email</h3>
-            <p><a href="#">raycrox1016@gmail.com</a></p>
+            <p>
+              <a href="mailto:raycrox1016@gmail.com">raycrox1016@gmail.com</a>
+            </p>
           </section>
           <section>
             <h3>Social</h3>
