--- a/index.html
+++ b/index.html
@@ -32,9 +32,7 @@
         </p>
         <ul class="actions">
           <li>
-            <a
-              href="#header"
-              class="button icon solid solo fa-arrow-down scrolly"
+            <a href="#nav" class="button icon solid solo fa-arrow-down scrolly"
               >Continue</a
             >
           </li>
@@ -43,7 +41,7 @@
 
       <!-- Header -->
       <header id="header">
-        <a href="index.html" class="logo">Massively</a>
+        <!-- <a href="index.html" class="logo">Massively</a> -->
       </header>
 
       <!-- Nav -->
@@ -54,21 +52,6 @@
           <!-- <li><a href="elements.html">Elements Reference</a></li> -->
         </ul>
         <ul class="icons">
-          <li>
-            <a href="#" class="icon brands fa-twitter"
-              ><span class="label">Twitter</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
           <li>
             <a href="#" class="icon brands fa-github"
               ><span class="label">GitHub</span></a
@@ -82,13 +65,15 @@
         <!-- Featured Post -->
         <article class="post featured">
           <header class="major">
-            <h2>Hi, I'm Ray Croxton</h2>
+            <h2 id="my-name">Hi, I'm Ray Croxton</h2>
             <p>
-              I'm a front end web developer with my focus being HTML emails. Web
-              development quickly became a big part of my life and I feel
-              extremely grateful to be a part of the world of tech! To start,
-              please take a look at my clean and responsive real estate landing
-              page below.
+              I'm a front end web developer with my focus being HTML emails. In
+              addition to being a skilled and detail oriented developer, I am
+              also knowledgeable when it comes to email marketing and resources
+              like convertKit. Web development quickly became a big part of my
+              life and I feel extremely grateful to be a part of the world of
+              tech! To start, please take a look at my clean and responsive real
+              estate landing page below.
             </p>
           </header>
           <a
@@ -104,9 +89,9 @@
             <li>
               <a
                 target="_blank"
-                href="http://raycroxton.com/dreamland"
+                href="https://github.com/RayCrox1016/realEstateLandingPage"
                 class="button large"
-                >Discover</a
+                >Code</a
               >
             </li>
           </ul>
@@ -139,9 +124,9 @@
               <li>
                 <a
                   target="_blank"
-                  href="https://raycroxton.com/promotional/"
+                  href="https://github.com/RayCrox1016/promotional-email"
                   class="button"
-                  >Discover</a
+                  >Code</a
                 >
               </li>
             </ul>
@@ -171,9 +156,9 @@
               <li>
                 <a
                   target="_blank"
-                  href="https://raycroxton.com/luxuryhome/"
+                  href="https://github.com/RayCrox1016/luxuryHome"
                   class="button"
-                  >Discover</a
+                  >Code</a
                 >
               </li>
             </ul>
@@ -203,9 +188,9 @@
               <li>
                 <a
                   target="_blank"
-                  href="https://raycroxton.com/transactional/"
+                  href="https://github.com/RayCrox1016/transactionalEmail"
                   class="button"
-                  >Discover</a
+                  >Code</a
                 >
               </li>
             </ul>
@@ -235,9 +220,9 @@
               <li>
                 <a
                   target="_blank"
-                  href="http://raycroxton.com/newsletter"
+                  href="https://github.com/RayCrox1016/newLetterEmail"
                   class="button"
-                  >Discover</a
+                  >Code</a
                 >
               </li>
             </ul>
@@ -252,7 +237,9 @@
         <section class="split contact">
           <section>
             <h3>Email</h3>
-            <p><a href="#">raycrox1016@gmail.com</a></p>
+            <p>
+              <a href="mailto:raycrox1016@gmail.com">raycrox1016@gmail.com</a>
+            </p>
           </section>
           <section>
             <h3>Social</h3>
