cleaned up icon lis

--- a/index.html
+++ b/index.html
@@ -53,7 +53,10 @@
         </ul>
         <ul class="icons">
           <li>
-            <a href="#" class="icon brands fa-github"
+            <a
+              target="_blank"
+              href="https://github.com/RayCrox1016"
+              class="icon brands fa-github"
               ><span class="label">GitHub</span></a
             >
           </li>
@@ -241,31 +244,17 @@
               <a href="mailto:raycrox1016@gmail.com">raycrox1016@gmail.com</a>
             </p>
           </section>
-          <section>
+          <!-- <section>
             <h3>Social</h3>
             <ul class="icons alt">
-              <li>
-                <a href="#" class="icon brands alt fa-twitter"
-                  ><span class="label">Twitter</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands alt fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands alt fa-instagram"
-                  ><span class="label">Instagram</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands alt fa-github"
+             
+                <a target="_blank"
+                href="https://github.com/RayCrox1016" class="icon brands alt fa-github"
                   ><span class="label">GitHub</span></a
                 >
               </li>
             </ul>
-          </section>
+          </section> -->
         </section>
       </footer>
 
