--- a/generic.html
+++ b/generic.html
@@ -32,18 +32,11 @@
           <li class="active"><a href="generic.html">Skills</a></li>
         </ul>
         <ul class="icons">
-          <li>
-            <a href="#" class="icon brands fa-facebook-f"
-              ><span class="label">Facebook</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-instagram"
-              ><span class="label">Instagram</span></a
-            >
-          </li>
-          <li>
-            <a href="#" class="icon brands fa-github"
+          <li></li>
+            <a
+              target="_blank"
+              href="https://github.com/RayCrox1016"
+              class="icon brands fa-github"
               ><span class="label">GitHub</span></a
             >
           </li>
@@ -185,31 +178,21 @@
               <a href="mailto:raycrox1016@gmail.com">raycrox1016@gmail.com</a>
             </p>
           </section>
-          <section>
+          <!-- <section>
             <h3>Social</h3>
             <ul class="icons alt">
               <li>
-                <a href="#" class="icon brands alt fa-twitter"
-                  ><span class="label">Twitter</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands alt fa-facebook-f"
-                  ><span class="label">Facebook</span></a
-                >
-              </li>
-              <li>
-                <a href="#" class="icon brands alt fa-instagram"
-                  ><span class="label">Instagram</span></a
-                >
-              </li>
-              <li>
                 <a href="#" class="icon brands alt fa-github"
-                  ><span class="label">GitHub</span></a
+                  ><span
+                    target="_blank"
+                    href="https://github.com/RayCrox1016"
+                    class="label"
+                    >GitHub</span
+                  ></a
                 >
               </li>
             </ul>
-          </section>
+          </section> -->
         </section>
       </footer>
 
