--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           </header>
           <a
             target="_blank"
-            href="http://raycroxton.com/dreamland"
+            href="https://raycroxton.com/dreamland"
             class="image main"
             ><img
               id="intro-img"
